membuat fitur log out

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <!--    Update Profile-->
     <string name="update_profile">Update Profile</string>
     <string name="Input">Input</string>
+    <string name="LogOut">Log Out</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
