--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="profile_picture">Profile Picture</string>
 
     <!--    Profile-->
-    <string name="first_name">What’s your first name?</string>
+    <string name="full_name">What’s your full name?</string>
     <string name="last_name">What’s your last name?</string>
     <string name="phone_number">Phone number</string>
     <string name="date_of_birth">What is your date of birth?</string>
