--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="update_profile">Update Profile</string>
     <string name="Input">Input</string>
     <string name="LogOut">Log Out</string>
+    <string name="NoHaveAcc">Not Have Account? Sign Up Now</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
